Finish re-arranging CMA diagram content for consistency with Swanson

--- a/content/notes/UWAA556/ch02-4.md
+++ b/content/notes/UWAA556/ch02-4.md
@@ -1,5 +1,5 @@
 ---
-title: Cold Magnetized Plasma Wave Properties
+title: The CMA Diagram
 weight: 40
 # bookToc: false
 ---
@@ -9,6 +9,793 @@ weight: 40
 
 {{< /katex >}}
 
-# Cold Magnetized Plasma Wave Properties
+# The CMA Diagram
+
+In the previous section, we derived the dispersion relation for a cold uniform magnetized plasma:
+
+{{< katex display >}}
+A n^4 - B n^2 + C = 0 
+{{< /katex >}}
+{{< katex display >}}
+A = S \sin ^2 \theta + P \cos ^2 \theta
+{{< /katex >}}
+{{< katex display >}}
+B = R L \sin ^2 \theta + P S (1 + \cos ^2 \theta)
+{{< /katex >}}
+{{< katex display >}}
+C = PRL
+{{< /katex >}}
+
+Or, equivalently
+
+{{< katex display >}}
+\tan ^2 \theta = - \frac{P (n^2 - R)(n^2 - L)}{(Sn^2 - RL)(n^2 - P)}
+{{< /katex >}}
+
+where \\( n \\) is the index of refraction, \\( P \\), \\( R \\), \\( L \\), \\( S \\), and \\( D \\) are the Stix parameters, \\( \theta \\) is the angle between \\( \vec k \\) and \\( \vec B_0 \\). 
+
+The dispersion relation we obtained is based on the assumption of a homogeneous plasma. The results can be applied to inhomogeneous plasmas if the index of refraction varies sufficiently slowly. As a wave propagates through an inhomogeneous medium the plasma parameters are expected to change. Because of these changes, a wave originating in a particular mode at one point in the plasma may or may not be able to reach some other region of the plasma. This issue is referred to as _accessibility_. Two points \\( A \\) and \\( B \\) are said to be accessible via a particular mode if a ray path can connect the two points. A necessary condition for accessibility is that the index of refraction be real and continuous at all points along some ray path between the two points. Continuity of the index of refraction is a necessary, but not sufficient, condition for accessibility. It is not a sufficient condition because refraction may prevent a ray path from connecting the two points, even if the index of refraction is real and continuous between the two points.
+
+To answer the question of whether the index of refraction is real and continuous along a path between two points in a plasma, it is useful to consider a multi-dimensional parameter space called a CMA diagram, after Clemmow, Mullaly and Allis. A CMA diagram consists of a diagram with one coordinate for each parameter of the plasma, such as \\( n \\) and \\( B_0 \\). Within this parameter space a set of bounding surfaces is constructed defined by the various resonances and cutoffs.
+
+To draw our CMA diagram we will plot \\( X = \frac{\omega_p ^2}{\omega^2} \\) along the x axis and \\( Y = \frac{\omega_c}{\omega} \\) along the y-axis. We then divide the space by lines defined by cutoffs and resonances, across which waves are not allowed to propagate. In order to categorize the various plasma wave species, we need to find
+
+- The associated solution of the cold plasma dispersion relation
+- Resonances of the dispersion relation, where the phase velocity goes to zero (\\( n \rightarrow \infty \\))
+- Cut-offs of the dispersion relation, where the phase velocity goes to infinity (\\( n \rightarrow 0 \\))
+
+
+## Cutoff and Resonance
+
+Dispersion relations come from a linear analysis of the equations of motion, because are actually able to solve linear equations. In reality, the equation of motion is generally nonlinear, so we linearize small perturbation quantities to get an equivalent linear system that is valid for small amplitudes. At larger amplitudes, the non-linear effects again become dominant and our linearization fails.
+
+When we encounter resonances, we are guaranteed to leave the linear regime after some period of time. Near resonance, it's like the particle is experiencing a constant force, up until the non-linear effects kick in. We can predict resonance through linear analysis, but we can't analyze the long-term behavior near resonance. But we can assign meaning to some specific behavior.
+
+Resonances in the dispersion relation occur for specific combinations of \\( \omega \\) and \\( k \\). We're going to consider the square of the index of refraction (because it doesn't depend on the sign of the phase velocity)
+{{< katex display >}}
+n^2 = \frac{c^2 k^2}{\omega^2} \sim (\frac{c}{v_{\text{phase}}})^2
+{{< /katex >}}
+
+
+### Cut-off
+
+When we enter a region of phase space where waves can not exist, we call that boundary a cut-off. This happens when \\( n^2 < 0 \\), where either the phase velocity, the frequency, or \\( k \\) are imaginary. These solutions exponentially grow/shrink in time, and are not wave solutions.
+
+The general condition for cut-off \\( (n \rightarrow 0) \\) is
+
+{{< hint info >}}
+**General Condition for Cut-off**
+
+{{< katex display >}}
+C = P R L = 0
+{{< /katex >}}
+
+{{< /hint >}}
+
+If a wave enters a region of cut-off we get a decaying amplitude. This physically corresponds with either absorption or reflection.
+
+\\( n^2 \\) is a function of \\( \omega \\). When it crosses the origin, we call that frequency a cut-off frequency.
+
+For example, for the ordinary plasma wave we will find
+
+{{< katex display >}}
+0 = 1 - \frac{c^2 k^2}{\omega^2} - \frac{\omega_p ^2}{\omega^2}
+{{< /katex >}}
+{{< katex display >}}
+\rightarrow \quad  n^2 = 1 - \frac{\omega_p ^2}{\omega^2} < 0
+{{< /katex >}}
+{{< katex display >}}
+\rightarrow \quad \omega_p > \omega^2
+{{< /katex >}}
+So for the ordinary plasma wave, the frequency must be higher than the plasma frequency and the cutoff frequency for the ordinary plasma wave is \\( \omega_p \\).
+
+The range of \\( \omega \\) for which \\( n^2 < 0 \\) is called a band-gap.
+
+### Resonance
+
+When \\( n^2 \rightarrow \infty \\) we get a resonance. The general condition for resonance is
+
+
+{{< hint info >}}
+**General Condition for Resonance**
+
+{{< katex display >}}
+\tan ^2 \theta = - P / S
+{{< /katex >}}
+
+{{< /hint >}}
+
+For the ordinary plasma wave, this is
+{{< katex display >}}
+n^2 = \frac{c^2 k^2}{\omega^2} \rightarrow \infty 
+{{< /katex >}}
+{{< katex display >}}
+\rightarrow \omega = 0
+{{< /katex >}}
+Writing \\( n^2 = \frac{c^2}{v_{\text{phase}}^2} \\), we equivalently have resonance whenever the phase velocity goes to \\( 0 \\). A stationary wave does not move, so particles experience a constant force in the linear approximation, leading to infinite amplitudes.
+
+In an inhomogeneous plasma, cutoffs are associated with a reflection of wave energy. The plasma density doesn't go immediately from vacuum to \\( n_p \\), there is a transition region. At some point, a wave going through transition may hit a density such that \\( n^2 < 0 \\) and the wave will be reflected at that point.
+
+At resonance, the wave is absorbed. There can also be a release of energy from the plasma, but for a thermal plasma we consider the wave energy to be absorbed by the plasma and not the other way around.
+
+What do resonances really mean in the context of the plasma dynamics? Let's look back at the momentum equation. From the electron momentum equation, we can write down
+{{< katex display >}}
+\dv{v_x}{t} = - \frac{e}{m_e} (E_x + v_y B_0)
+{{< /katex >}}
+{{< katex display >}}
+\dv{v_y}{t} = - \frac{e}{m_e} (E_y - v_x B_0)
+{{< /katex >}}
+for \\( \vec B_0 = B_0 \vu z \\), we can differentiate with respect to time and substitute to combine the two expressions and get
+{{< katex display >}}
+\pdv{^2 v_x}{t^2} + \omega_{ce}^2 V_x = - \frac{e}{m_e} (\pdv{E_x}{t} - \omega_{ce} E_y)
+{{< /katex >}}
+
+For a right-handed wave propagating parallel to \\( \vec B \\), we have solutions like
+
+{{< katex display >}}
+E_x = E_0 \cos \omega_{ce} t \qquad E_y = E_0 \sin \omega_{ce} t
+{{< /katex >}}
+
+So the momentum equation is
+{{< katex display >}}
+\pdv{^2 v_x}{t^2} + \omega_{ce}^2 v_x = \frac{2 e E_0 \omega_{ce}}{m_e} \sin \omega_{ce} t
+{{< /katex >}}
+
+The left-hand-side is the equation for a harmonic oscillator, with a harmonic forcing term. In general, the solution for the simple harmonic motion is
+
+{{< katex display >}}
+v_x = v_0 \cos (\omega_{ce} t + \phi) + v_0 \sin (\omega_{ce} t + \phi)
+{{< /katex >}}
+
+If we include the forcing function, the solutions are
+{{< katex display >}}
+v_x = - \frac{E_0}{B_0} \omega_{ce} t \cos \omega_{ce} t
+{{< /katex >}}
+{{< katex display >}}
+v_y = - \frac{E_0}{B_0} \omega_{ce} t \sin \omega_{ce} t
+{{< /katex >}}
+
+It's easy to see what happens to solutions that are proportional to \\( t \\). As \\( t \rightarrow \infty \\), we get unrealistic results that must be accounted for by non-linearities or other physical constraints.
+
+
+## Principal Solutions - Parallel Propagation
+
+We define the principal resonances to be those which occur at \\( \theta = 0 \\) and \\( \theta = \pi/2 \\).
+
+{{< katex display >}}
+\theta = 0 \qquad \vec k \parallel \vec B_0
+{{< /katex >}}
+
+{{< katex display >}}
+\rightarrow P(n^2 - R)(n^2 - L) = 0
+{{< /katex >}}
+
+The \\( \theta = 0 \\) case gives three types of solution: static plasma waves, right-handed electromagnetic waves, and left-handed electromagnetic waves.
+
+We will get cut-offs whenever any of the following are true:
+{{< katex display >}}
+P = 0 \qquad R = 0 \qquad L = 0
+{{< /katex >}}
+
+For resonance, we seek solutions to
+
+{{< katex display >}}
+\tan ^2 \theta \rightarrow - \frac{P}{S}
+{{< /katex >}}
+
+\\( P = 0 \\) was a cut-off, so for \\( \theta = 0 \\) the generic condition for resonance is \\( \rightarrow - P / S = 0 \\) \\( \rightarrow S \rightarrow \infty \\). \\( S = \frac{1}{2}(R+L) \\) so we have resonances for \\( \theta = 0 \\) if either \\( R \rightarrow \infty \\) or \\( L \rightarrow \infty \\).
+
+### Plasma Wave
+
+This is the \\( P = 0 \\) solution to \\( \tan ^2 \theta = 0 \\), which is itself a cut-off of the CPDR:
+
+{{< katex display >}}
+P = 0 = 1 - \frac{\omega_p^2}{\omega^2}
+{{< /katex >}}
+
+{{< katex display >}}
+\rightarrow \omega = \pm \omega_p
+{{< /katex >}}
+
+Solutions of this type propagate parallel to \\( \vec B \\) and are static, non-thermal plasma waves. The electric field eigenvector is
+
+{{< katex display >}}
+\hat{\vec E} = \begin{bmatrix} 0 \\ 0 \\ E_0 \end{bmatrix}
+{{< /katex >}}
+
+The magnetic field has no effect on this mode, as the \\( \vec v \cross \vec B \\) force never comes into play. This is the same solution we found for an unmagnetized plasma: a longitudinal wave propagating at the plasma frequency.
+
+### R-wave
+
+The R and L waves decouple because of the chirality of the circular motion of the charges, and because particles have an asymmetric response to the magnetic field due to their charge-to-mass ratios.
+
+The R-wave is the solution \\( n^2 = R \\)
+
+{{< katex display >}}
+n^2 - R = 0
+{{< /katex >}}
+
+{{< katex display >}}
+1 - \frac{c^2 k^2}{\omega^2} - \sum_\alpha \frac{\omega_{p, \alpha}^2}{\omega^2} \frac{\omega}{\omega + \omega_{c, \alpha}} = 0
+{{< /katex >}}
+
+These are electromagnetic waves with right-handed polarization propagating along \\( \vec B \\)
+
+
+{{< katex display >}}
+\text{R-wave}: \quad n_R ^2 - R = 0 \rightarrow n_R ^2 = 1 - \sum_\alpha \frac{\omega_{p, \alpha}^2}{\omega(\omega + \omega_{c, \alpha})}
+{{< /katex >}}
+
+For an electron-ion plasma,
+
+{{< katex display >}}
+n_R ^2 = 1 - \frac{\omega_{p, e}^2}{\omega(\omega - |\omega_{c, e}|)} - \frac{\omega_{p, i}^2}{\omega(\omega + |\omega_{c, i}|)}
+{{< /katex >}}
+
+So R-wave resonance happens when \\( \omega = \omega_{c, e} \\). We get electron resonance with the R-wave because electrons orbit \\( \vec B \\) counter-clockwise.
+
+Cut-offs for the R wave are
+{{< katex display >}}
+n_R ^2 = R = 0 \rightarrow \omega_R = 0
+{{< /katex >}}
+{{< katex display >}}
+\omega_R = \frac{\omega_{c, e} - \omega_{c, i}}{2} + \left( \left(\frac{\omega_{c, e} + \omega_{c, i}}{2} \right)^2  + \omega_p ^2 \right)^{1/2}
+{{< /katex >}}
+In the strongly magnetized limit \\( \omega_p / \omega_c \ll 1 \\)
+{{< katex display >}}
+\omega_R \approx \omega_{c, e} \left( 1 + \frac{\omega_{p, e}^2}{\omega_{c, e}^2} \right) \approx \omega_{c, e} \quad \text{(low-density R-wave cutoff)}
+{{< /katex >}}
+In the un-magnetized limit \\( \omega_p / \omega _c \gg 1 \\)
+{{< katex display >}}
+\omega_R \approx \omega_{p, e} + \frac{1}{2} \omega_{c, e} \approx \omega_{p, e} \quad \text{(high-density R-wave cutoff)}
+{{< /katex >}}
+
+Consider the high-frequency and low-frequency limits to get a feel for the situation:
+
+{{< katex display >}}
+\omega \rightarrow 0 \quad \rightarrow \quad n_R ^2 \approx 1 + \frac{\omega_{p, i}^2}{\omega_{c, i} ^2} \quad \text{(MHD limit)}
+{{< /katex >}}
+{{< katex display >}}
+\omega \rightarrow \infty \quad \rightarrow \quad n_R ^2 \approx 1 - \frac{\omega_{p, e}^2}{\omega^2} \quad \text{(ordinary wave)}
+{{< /katex >}}
+
+We see that low-frequency R-waves elicit a MHD response.
+
+<p align="center"> <img alt="r-wave-dispersion" src="/r/img/556/r-wave-dispersion.png" /> </p> 
+
+### L-wave 
+
+These are electromagnetic waves with left-handed polarization propagating along \\( \vec B \\)
+
+{{< katex display >}}
+n^2 - L = 0
+{{< /katex >}}
+
+{{< katex display >}}
+\rightarrow 1 - \frac{c^2 k^2}{\omega^2} - \sum_\alpha \frac{\omega_{p, \alpha}^2}{\omega^2} \frac{\omega}{\omega - \omega_{c, \alpha}} = 0
+{{< /katex >}}
+
+
+Repeating the same process for L-waves, \\( n_L ^2 - L = 0 \\) we get
+{{< katex display >}}
+n_L ^2 = 1 - \frac{\omega_{p, e}^2}{\omega(\omega - |\omega_{c, i}|)} - \frac{\omega_{p, i}^2}{\omega(\omega + |\omega_{c, e}|)}
+{{< /katex >}}
+
+The resonance condition is \\( \omega = \omega_{c, i} \\) because positively charged ions orbit clockwise with respect to the magnetic field.
+
+Cut-off happens when
+{{< katex display >}}
+\omega_L = \frac{\omega_{c, i} - \omega_{c, e}}{2} + \left[ \left(\frac{\omega_{c, i} + \omega_{c, e}}{2}\right)^2 + \omega_p ^2 \right]^{1/2}
+{{< /katex >}}
+
+The limits for the L-wave are:
+
+- Low density: \\( \omega_L \approx \omega_{c, i} (1 + \frac{\omega_{p, i}^2}{\omega_{c, i}^2}) \approx \omega_{c, i} \\)
+- High density: \\( \omega_L \approx \omega_{p, e} - \frac{1}{2} \omega_{c, e} \approx \omega_{p, e} \\)
+- Low frequency: \\( n_L ^2 \approx n_R ^2 \approx 1 + \frac{\omega_{p, i}^2}{\omega_{c, i}^2} \\)
+- High frequency: \\( n_L ^2 \approx n_R ^2 \approx 1 - \frac{\omega_{p, e}^2}{\omega^2} \\)
+
+<p align="center"> <img alt="l-wave-dispersion" src="/r/img/556/l-wave-dispersion.png" /> </p> 
+
+## Principal Solutions - Perpendicular Propagation
+
+{{< katex display >}}
+\theta = \pi / 2 \qquad \vec k \perp \vec B_0
+{{< /katex >}}
+{{< katex display >}}
+\rightarrow (S n^2 - RL) (n^2 - P) = 0
+{{< /katex >}}
+There are two types of solution for waves propagating perpendicular to the magnetic field:
+
+1) \\( n^2 - P = 0 \\)
+{{< katex display >}}
+\rightarrow 1 - \frac{c^2 k^2}{\omega^2} - \frac{\omega_p ^2}{\omega^2} = 0
+{{< /katex >}}
+This is the ordinary wave, propagating perpendicular to the magnetic field (O-wave). The refractive index does not depend on \\( B_0 \\) at all.
+2) \\( n^2 - \frac{RL}{S} = 0 \\)
+This is a much more complicated expression, leading us to the extraordinary wave (X-wave). It has two different resonances.
+
+### Ordinary Wave (O-wave)
+
+
+{{< hint info >}}
+**Ordinary Wave**
+
+{{< katex display >}}
+n_O ^2 = P = 1 - \frac{\omega_{pe}^2}{\omega ^2} - \frac{\omega_{pi}^2}{\omega^2} = 1 - \frac{\omega_p}{\omega ^2}
+{{< /katex >}}
+
+{{< katex display >}}
+\rightarrow 1 - \frac{c^2 k^2}{\omega^2} - \frac{\omega_p ^2}{\omega^2} = 0
+{{< /katex >}}
+
+{{< /hint >}}
+
+For \\( \theta = \pi / 2 \\), because \\( \vec E  \\) can be either parallel or perpendicular to the cyclotron orbits, we get hybrid oscillations. First, look at the ordinary plasma wave with \\( \vec E \\) linear polarized in the direction of \\( \vec B \\).
+
+{{< katex display >}}
+n_O ^2 = 1 - \frac{\omega_p ^2}{\omega^2}
+{{< /katex >}}
+
+The resonance condition here is \\( v_\phi > c \\), which doesn't happen, so there aren't any resonances. The cut-off condition is \\( \omega_O = \omega_p \\) for the ordinary wave. There is no propagation below \\( \omega_p \\)
+
+### Extraordinary Wave (X-wave)
+
+
+{{< hint info >}}
+**X-wave**
+
+{{< katex display >}}
+n_X ^2 = \frac{RL}{S}
+{{< /katex >}}
+
+{{< /hint >}}
+
+
+We can factor the dispersion relation for the X-wave like this:
+
+{{< katex display >}}
+n_X ^2 = \frac{RL}{S} = \frac{((\omega + \omega_{c, i})(\omega - \omega_{c, e})- \omega_p ^2)((\omega - \omega_{c, i})(\omega + \omega_{c, e}) - \omega_p ^2)}{(\omega ^2 - \omega_{c, i}^2)(\omega^2 - \omega_{c, e}^2) + \omega_p ^2(\omega_{c, e} \omega_{c, i} - \omega ^2)}
+{{< /katex >}}
+
+<p align="center"> <img alt="x-wave-dispersion.png" src="/r/img/556/x-wave-dispersion.png" /> </p> 
+
+We can immediately see that the orbits are going to be complicated. With everything nicely factored, we look for resonances and cutoffs
+
+### X-wave Resonances
+
+The condition for resonance is:
+
+{{< katex display >}}
+n_x ^2 \rightarrow \infty 
+{{< /katex >}}
+
+{{< katex display >}}
+(\omega ^2 - \omega_{c, i}^2)(\omega^2 - \omega_{c, e}^2) + \omega_p ^2(\omega_{c, e} \omega_{c, i} - \omega^2) \rightarrow 0
+{{< /katex >}}
+{{< katex display >}}
+\omega^2 = \frac{\omega_{u, e}^2 + \omega_{u, i}^2}{2} \pm \left[ \left( \frac{\omega_{u, e} - \omega_{u, i}}{2}\right)^2 + \omega_{p, e}^2 \omega_{p, i}^2 \right]^{1/2}
+{{< /katex >}}
+where we define the upper hybrid frequency
+{{< katex display >}}
+\omega_{u, \alpha}^2 \equiv \omega_{p, \alpha}^2 + \omega_{c, \alpha}^2
+{{< /katex >}}
+Approximating the exact solutions by disregarding terms that are small in the electron/ion mass ratio, we get two resonances of the extraordinary wave
+{{< katex display >}}
+\omega_{UH}^2 \equiv \omega_{p, e}^2 + \omega_{c, e}^2 \quad \text{Upper-hybrid X-wave}
+{{< /katex >}}
+{{< katex display >}}
+\omega_{LH}^2 \equiv \omega_{c, e} \omega_{c, i} \frac{\omega_{p, e}^2 + \omega_{c, e} \omega_{c, i}}{\omega_{p, e}^2 + \omega_{c, e}^2} \approx \omega_{c, e} \omega_{c, i} \quad \text{Lower-hybrid X-wave}
+{{< /katex >}}
+
+The resonances of the X-wave are approximately at the norm (upper hybrid) and geometric mean (lower hybrid) of the electron frequencies.
+
+### Lower Hybrid Resonance
+
+If we just look at the lower hybrid resonance, let's take a look at how the currents resulting from the wave flow:
+
+{{< katex display >}}
+S E_x - i D E_y = 0
+{{< /katex >}}
+
+For the lower-hybrid resonance, we get \\( E_y = 0 \\).
+
+From the conductivity tensor \\( \sigma \\), we can convince ourselves that \\( |\sigma_{xx}| \ll |\sigma_{xy}| \\), and
+
+{{< katex display >}}
+J_x = \sigma_{xx} E_x + \sigma_{xy} E_y \approx 0
+{{< /katex >}}
+{{< katex display >}}
+J_y = - \sigma_{xy}  E_x + \sigma_{xx} E_y \neq 0
+{{< /katex >}}
+
+Interestingly, the majority of the resulting current is in the \\( y \\) direction, but the electric field is in the \\( x \\) direction.
+
+From dispersion relation
+
+{{< katex display >}}
+J_x = \sigma_{xx} E_x + \sigma_{xy} E_y \approx 0
+{{< /katex >}}
+{{< katex display >}}
+J_y = - \sigma_{xy} E_x + \sigma_{xx} E_y \neq 0
+{{< /katex >}}
+
+From the Fourier transform of the electron momentum equation,
+
+{{< katex display >}}
+\pdv{\vec v_e}{t} = - \frac{e}{m_e} (\vec E + \vec v \cross \vec B_0)
+{{< /katex >}}
+
+{{< katex display >}}
+-i \omega_{LH} \vec v_e = - \frac{e}{m_e} ( \vec E + \vec v_e \cross \vec B_0) = - \frac{e}{m_e} (\vec E - \omega_{ce} \vec v_e \cross \vu z)
+{{< /katex >}}
+We can split this in the x- and y-directions, to become
+{{< katex display >}}
+-i \omega_{LH} v_{ex} = - \frac{e}{m_e} E_x - \omega_{ce} v_{ey} \quad \text{(x-direction)}
+{{< /katex >}}
+{{< katex display >}}
+-i \omega_{LH} v_{ey} = - \omega_{ce} v_{ex} \quad \text{(y-direction)}
+{{< /katex >}}
+
+Just from the second equation, we get
+
+{{< katex display >}}
+\frac{v_{ey}}{v_{ex}} = \left| \frac{i \omega_{ce}}{\omega_{LH}} \right| \gg 1
+{{< /katex >}}
+
+We can deduce that the y-component of displacement is much greater than the x-component
+
+{{< katex display >}}
+\frac{y_e}{x_e} \gg 1
+{{< /katex >}}
+
+Looking at the Fourier transform of the ion equation,
+
+{{< katex display >}}
+- i \omega_{LH} \vec v_i = \frac{e}{m_i} \vec E + \omega_{ci} \vec v_i \cross \vu z
+{{< /katex >}}
+
+In the x-direction:
+
+{{< katex display >}}
+- i \omega_{LH} v_{ix} = \frac{e}{m_i} E_x + \omega_{ci} v_y
+{{< /katex >}}
+
+In the y-direction
+
+{{< katex display >}}
+- i \omega_{LH} v_{iy} = - \omega_{ci} v_{ix}
+{{< /katex >}}
+
+If we consider the various magnitudes of the frequencies and mass ratios involved, we can assume that
+
+{{< katex display >}}
+\omega_{LH} \approx \sqrt{\omega_{ce} \omega_{ci}}
+{{< /katex >}}
+
+Combining the system of equations for the ion momentum equation, we get
+
+{{< katex display >}}
+i \left( \frac{\omega_{ci}^2}{\omega_{LH}^2} - 1 \right) v_{i x} = \frac{1}{\omega_{LH}} \frac{e E_x}{m_i}
+{{< /katex >}}
+{{< katex display >}}
+\rightarrow v_{ix} = \frac{i}{\omega_{LH}} \frac{e E_x}{m_i}
+{{< /katex >}}
+
+Then
+{{< katex display >}}
+\left| \frac{v_{iy}}{v_{ix}} \right| = \left| - i\frac{\omega_{ci}}{\omega_{LH}} \right| \ll 1
+{{< /katex >}}
+
+So, for the ions, following the same logic as with the electrons, we have
+
+{{< katex display >}}
+y_i \ll x_i
+{{< /katex >}}
+
+If we compare the ion and electron velocities,
+
+{{< katex display >}}
+\frac{v_{ex}}{v_{ix}} = \frac{\omega_{LH}^2}{\omega_{ce} ^2} \frac{m_i}{m_e} \sim \frac{\omega_{ce} \omega_{ci}}{\omega_{ci}^2} \frac{m_i}{m_e} \sim \frac{\omega_{ci}}{\omega_{ce}} \frac{m_i}{m_e}
+{{< /katex >}}
+{{< katex display >}}
+= \frac{m_e}{m_i} \frac{m_i}{m_e} = 1
+{{< /katex >}}
+
+So the x-components of the ion and electron currents have the same magnitude and cancel each other out.
+
+
+The upper hybrid resonance produces a similar effect, but the frequency of the upper hybrid resonance is higher.
+
+### Upper Hybrid Resonance
+
+Same equations of motion, and same dispersion relationship as before, but with a different frequency
+
+{{< katex display >}}
+\omega_{UH} \gg \omega_{ci} \quad \omega_{UH} \gg \omega_{LH}
+{{< /katex >}}
+
+so when we consider the UH resonance, we consider the ions to be essentially stationary.
+
+{{< katex display >}}
+- i \omega_{UH} \vec v_e = - \frac{e}{m_e} (E_x \vu x + \vec v_e \cross \vec B_0)
+{{< /katex >}}
+
+Using \\( \omega_{UH}^2 = \omega_{pe}^2 + \omega_{ce}^2 \\)
+
+{{< katex display >}}
+\rightarrow v_{ex} = \frac{e \omega_{UH} E_x}{i m_e \omega_{pe}^2}
+{{< /katex >}}
+
+{{< katex display >}}
+v_{ey} = \frac{e \omega_{ce} E_x}{m_e \omega_{pe}^2}
+{{< /katex >}}
+
+Again from the conductivity tensor,
+
+{{< katex display >}}
+J_x = \sigma_{xx} E_x + \sigma_{xy} E_y \approx 0
+{{< /katex >}}
+{{< katex display >}}
+J_y = - \sigma_{xy}  E_x + \sigma_{xx} E_y \neq 0
+{{< /katex >}}
+
+{{< katex display >}}
+J_x = i \omega_{UH} \epsilon_0 E_x
+{{< /katex >}}
+{{< katex display >}}
+J_y = - \omega_{ce} \epsilon_0 E_x
+{{< /katex >}}
+
+The displacement current \\( \epsilon_0 \pdv{\vec E}{t} \\) is
+
+{{< katex display >}}
+\epsilon_0 \pdv{E_x}{t} = - i \omega_{UH} \epsilon_0 E_x
+{{< /katex >}}
+
+This is the negative of the electron current \\( J_x \\), so the two cancel out. Again we get \\( J_x = 0 \\) but \\( J_y \neq 0 \\).
+
+
+### X-wave Cutoff
+
+Cut-offs of the extraordinary wave correspond with roots of the numerator
+{{< katex display >}}
+\omega_X = \left[ \left(\frac{\omega_{c, e} + \omega_{c, i}}{2} \right)^2 + \omega_p ^2 \right] ^{1/2} \pm \frac{\omega_{p, e} - \omega_{c, i}}{2}
+{{< /katex >}}
+
+- High-density: \\( \omega_X \rightarrow \omega_{p, e} \pm \frac{1}{2} \omega_{c, e} \\)
+- Low-density: \\( \omega_X \rightarrow \omega_{ce} (1 + \frac{\omega_{p, e}^2}{\omega_{c, e}^2}) \\) and \\( \omega_{c, i} (1 + \frac{\omega_{c, e}}{\omega_{c, i}} \frac{\omega_{p, e}^2}{\omega_{c, e}^2}) \\)
+- Low-frequency: \\( n_X = 1 + \frac{\omega_{p, i}^2}{\omega_{c, i}^2} \\)
+- High-frequency: \\( n_X^2 = 1 \\), same as the free-space wave, so the plasma is transparent.
+
+
+## Overdense and Underdense Plasmas
+
+Take a look at the "sum" terms in the dispersion relation
+
+{{< katex display >}}
+S = \frac{1}{2} (R + L) = 1 - \sum_\alpha \frac{\omega_{p, \alpha}^2}{\omega^2 - \omega_{c, \alpha}^2}
+{{< /katex >}}
+\\( \omega \\) has units of radians per second, so the timescale of this term is un-normalized. Because there are two different characteristic frequencies \\( \omega_p \\) and \\( \omega_c \\), we can't normalize to one of them. Let's choose to normalize to the cyclotron frequency, \\( \omega / \omega_{c, \alpha} \\). Then we can write \\( S \\) as
+{{< katex display >}}
+S = 1 - \sum _\alpha \frac{\omega_{p, \alpha ^2}}{\omega^2} \frac{1}{(\omega / \omega_{c, \alpha})^2 - 1}
+{{< /katex >}}
+The term \\( (\omega_{p, \alpha} / \omega_{c, \alpha})^2 \\) is an important characteristic for a magnetized plasma. Writing out the definitions of each,
+{{< katex display >}}
+\frac{\omega_{p, \alpha}^2}{\omega_{c, \alpha}^2} = \frac{\frac{n_\alpha q_\alpha ^2}{\epsilon_0 m_\alpha}}{\frac{q_\alpha ^2 B_0 ^2}{m_\alpha ^2}} = \frac{n_\alpha m_\alpha}{\epsilon_0 B_0 ^2} = \frac{c^2}{v_{A, \alpha} ^2}
+{{< /katex >}}
+where the Alfven velocity \\( v_{A, \alpha} \\) is
+{{< katex display >}}
+v_{A, \alpha} ^2 = \frac{B_0 ^2}{\mu_0 n_\alpha m_\alpha}
+{{< /katex >}}
+So the ratio of the plasma frequency to the cyclotron frequency is
+{{< katex display >}}
+\frac{\omega_{p, \alpha}^2}{\omega_{c, \alpha}^2} \sim \frac{n}{B_0 ^2} \sim \frac{\text{mass density of charges}}{\text{energy density of magnetic flux}}
+{{< /katex >}}
+or, equivalently
+{{< katex display >}}
+\frac{\omega_{p, \alpha}^2}{\omega_{c, \alpha}^2} \sim \frac{c^2}{v_{A, \alpha} ^2} \sim \frac{(\text{velocity in free space})^2}{(\text{speed of magnetic perturbations})^2}
+{{< /katex >}}
+We have two interpretations of the parameter. It measures density vs. magnetization, and is also like a refractive index for magnetic perturbations.
+
+- If \\( \omega_p < \omega_c \\), we have an "under-dense" plasma. Density is low enough relative to magnetization that the response is dominated by magnetization.
+- If \\( \omega_p > \omega_c \\), we have an "over-dense" plasma. It is weakly magnetized.
+
+Generally speaking, over-dense plasmas are more unstable than under-dense plasmas. It's easier to keep under-dense, well magnetized plasmas in thermal nonequilibrium for longer periods of time.
+
+## Fast and Slow Waves & Birefringence
+
+Our dispersion relation looks something like
+{{< katex display >}}
+n^2 = \frac{B \pm F}{2A} \qquad n ^2 = n^2(\omega, \theta)
+{{< /katex >}}
+
+where the descriminant \\( F \\) is positive-definite. This means that for any angle \\( \theta \\) we get two solutions
+{{< katex display >}}
+n_1 ^2 = \frac{B + F}{2A} \qquad n_2 ^2 = \frac{B - F}{2A} \sim \frac{c^2}{v_\phi ^2}
+{{< /katex >}}
+We'll end up with "fast" waves with higher \\( v_\phi \\) and "slow" waves.
+
+All anisotropic media exhibit fast and slow waves, as a general property. Because there are two indices of refraction, we call the material birefringent. Light entering a birefringent material will be split and exit in two locations.
+
+There are many parallels between magnetized plasma and birefringent crystals, but there are some important differences
+
+- A plasma can have a moving optical axis
+- Birefringent properties of plasma are strong functions of density and magnetic field
+- There is a strong thermal response to the index of refraction, leading to e.g. Langmuir waves
+
+Despite these differences, there is a strong analogy between the cold plasma dispersion relation and the theory of birefringent crystals.
+
+
+## Wave Normal Surfaces
+
+Defined as the "locus of phase velocity vectors, \\( \vec v_{\phi} = \frac{\omega}{k} \vu k \\)" (Stix). Since the axis of symmetry for a cold magnetized plasma is the direction of the magnetic field, this is really just a polar plot of \\( v_\phi \\) and \\( \theta \\), the angle between \\( \vec k \\) and \\( \vec B \\)
+
+The cold plasma dispersion relation gave us
+
+{{< katex display >}}
+A n^4 - B n^2 + C = 0 
+{{< /katex >}}
+{{< katex display >}}
+A = S \sin ^2 \theta + P \cos ^2 \theta
+{{< /katex >}}
+{{< katex display >}}
+B = R L \sin ^2 \theta + P S (1 + \cos ^2 \theta)
+{{< /katex >}}
+{{< katex display >}}
+C = PRL
+{{< /katex >}}
+Solving the quadratic, we get
+{{< katex display >}}
+n^2 = \frac{B \pm F}{2A} \qquad F^2 = B^2 - 4AC = (RL - PS)^2 \sin^4 \theta + 4 P^2 D^2 \cos ^2 \theta
+{{< /katex >}}
+
+If we define \\( u = v_\phi / c = 1 / n \\), then this becomes
+
+{{< katex display >}}
+C u^4 - B u^2 + A = 0
+{{< /katex >}}
+
+(this doesn't work where there's a cut-off where \\( v_\phi = 0 \\)). Note that the \\( \theta \\) dependence of \\( A \\), \\( B \\), and \\( C \\) only depends on \\( \sin ^2 \theta \\) and \\( \cos ^2 \theta \\) terms. Therefore
+
+{{< katex display >}}
+u(\theta) = u (- \theta	)
+{{< /katex >}}
+
+and 
+
+{{< katex display >}}
+u ( \pi / 2 - \theta) = u(\theta - \pi / 2)
+{{< /katex >}}
+So, the surfaces formed by \\( u \\) are symmetric about \\( \theta = 0 \\) and \\( \theta = \pi / 2 \\).
+
+There are three topographical types of wave normal surfaces:
+
+<p align="center"> <img alt="wave-normal-types.png" src="/r/img/556/wave-normal-types.png" /> </p> 
+
+#### Spheroid
+
+Example: fast and slow waves
+
+Applying the approximation \\( \omega_{ci} \ll \omega_{ce} \\)
+
+{{< katex display >}}
+\frac{(c / u_R )^2}{(c / u_L)^2} \frac{n_R ^2}{n_L ^2} \approx \frac{1 - \frac{\omega_{pe}^2}{\omega(\omega - \omega_{ce})}}{1 - \frac{\omega_{pe}^2}{\omega(\omega + \omega_{ce})}} < 1
+{{< /katex >}}
+
+{{< katex display >}}
+\quad \rightarrow \quad u_R ^2 > u_L ^2
+{{< /katex >}}
+
+Since \\( u_R > u_L	\\) everywhere in the region, the wave normal surfaces will be nested spheroids with the R-wave surface surrounding the L-wave surface.
+
+#### Dumbbell Lemniscoid
+
+#### Wheel Lemniscoid
+
+
+## CMA Diagram
+
+
+We can finally trace out all of the surfaces defined by our cut-offs and resonances in a CMA diagram:
+
+<p align="center"> <img alt="cma-diagram.png" src="/r/img/556/cma-diagram.png" /> </p>
+
+Each line is a cutoff or resonance, except the line at \\( RL = PS \\) where the O and X waves both follow the plasma relation \\( n^2 = P \\). We can fill in the diagram with wave-normal surfaces which encode the possibility of information transfer. If a wave can't propagate due to cut-off or bandgap, it becomes invisible.
+
+- Inside any volume bounded by cutoff/resonance curves (BV) there are no cutoffs
+- If there is a resonance \\( n \rightarrow \infty \\) inside a bounded volume, then everywhere else in that bounded volume there exist resonance angles \\( \theta \\) corresponding to the same resonance. That is because \\( P / S \\) can not change sign within a bounded volume.
+- For any angle \\( \theta \\) where \\( n \neq 0 \\) or \\( \infty \\), then only one branch will be either real or imaginary. There is no transition from cut-off to not-cut-off
+- The wave normal surface is symmetric about the magnetic axis and \\( \theta = \pi/2 \\)
+- Classes of solutions can only coincide where \\( \theta = 0, \pi/2 \\) or \\( RL = PS \\)
+
+There are three topological possibilities for wave-normal surfaces in the CMA diagram.
+
+1) \\( v_\phi \neq 0 \\) for all angles \\( \theta \\) (wave exists for all \\( \theta \\)). Then the wave-normal diagram is roughly spherical
+2) \\( P / S < 0> \\), so there is a solution \\( \tan ^2 \theta = - P / S \\). Then the resonance angle defines a cone about the magnetic axis. Propagation will either be allowed everywhere inside the cone, or everywhere outside the cone.
+
+## Phase and Group Velocities
+
+
+{{< hint info >}}
+
+**Ordinary plasma wave**
+
+
+{{< katex display >}}
+v_g = \left. \pdv{\omega}{k} \right|_{k_0}
+{{< /katex >}}
+
+where \\( k_0  \\) is the center of a wave group in space
+
+{{< katex display >}}
+v_\phi = \frac{\omega}{k}
+{{< /katex >}}
+
+For the O-waves,
+
+{{< katex display >}}
+n^2 = 1 - \frac{\omega_p ^2}{\omega^2} = \frac{c^2 k^2}{\omega^2}
+{{< /katex >}}
+
+{{< katex display >}}
+\rightarrow \omega ^2 = \omega_p ^2 + c^2 k^2
+{{< /katex >}}
+
+{{< /hint >}}
+
+In 3 dimensions, the group velocity can be in a different direction than the phase velocity
+
+{{< katex display >}}
+\vec v_g = \grad_k \omega = \left. \pdv{\omega}{k} \right|_\theta \vu k + \frac{1}{k} \left. \pdv{\omega}{\theta} \right|_k \vu \theta
+{{< /katex >}}
+
+We define \\( \alpha \\) to be the angle between the phase and group velocities, then
+
+{{< katex display >}}
+\tan \alpha = \frac{\theta \text{-component}}{k \text{-component}} = \frac{\frac{1}{k} \pdv{\omega}{\theta} _k}{\pdv{\omega}{k} _\theta} = - \frac{1}{k} \pdv{k}{\theta} _\omega
+{{< /katex >}}
+
+From Swanson, we can express \\( \alpha \\) in terms of the refractive index:
+
+{{< katex display >}}
+\tan \alpha =  \frac{1}{v_\phi} \left. \pdv{v_\phi}{\theta} \right|_{\omega} = -\frac{1}{2 n^2} \left. \pdv{n^2}{\theta} \right|_{\omega}
+{{< /katex >}}
+
+\\( \alpha \\) helps us identify the relationship between \\( v_\phi \\) and \\( v_g \\). For example, in a spheroid wave normal surface, there is no variation of \\( \vec k \\) with \\( \theta \\), so \\( \tan \alpha = 0 \\) and \\( \vec v_\phi \\) and \\( \vec v_g \\) are in the same direction.
+
+But, if you have any variation with \\( k \\) with \\( \theta \\), then \\( \vu v_\phi \\) and \\( \vu v_g \\) are not identical.
+
+<p align="center"> <img alt="3d-phase-group-velocity.png" src="/r/img/556/3d-phase-group-velocity.png" /> </p> 
+
+## Whistler Waves
+
+Whistler waves emit in partially magnetized plasma, where 
+
+{{< katex display >}}
+\omega_{ci} \ll \omega \ll \omega_{ce} \sim \omega_{pe}
+{{< /katex >}}
+
+If we look at the R-wave dispersion relationship, we find the phase and group velocities are
+
+{{< katex display >}}
+n_R ^2 = 1 - \frac{\omega_{pi}^2}{\omega(\omega + \omega_{ci})} - \frac{\omega_{pe}^2}{\omega(\omega - \omega_{ce})} \approx \frac{\omega_{pe}^2}{\omega \omega_{ce}} = \frac{c^2 k^2}{\omega ^2}
+{{< /katex >}}
+
+{{< katex display >}}
+\rightarrow \omega = c^2 k^2 \omega_{ce}
+{{< /katex >}}
+
+But the phase velocity is
+
+{{< katex display >}}
+v_\phi = \frac{\omega}{k} = \frac{c^2 k \omega_{ce}}{\omega_{pe }^2}  = c \sqrt{\frac{\omega \omega_{ce}}{\omega_{pe}^2}}
+{{< /katex >}}
+
+and the group velocity is exactly twice the phase velocity
+
+{{< katex display >}}
+v_g = \pdv{\omega}{k} = \frac{2 c^2 k ^2 \omega_{ce} }{\omega_{pe}^2} = 2 v _\phi
+{{< /katex >}}
 
 
